--- a/html_lastfm_parser.ipynb
+++ b/html_lastfm_parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,19 +32,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'artist': 'Elthon John', 'track': 'goodbye yellow brick road', 'tags': ['70s', 'classic rock', 'pop', 'elton john', 'rock']}\n"
+      "[{'artist': 'Elthon John', 'track': 'goodbye yellow brick road', 'tags': ['70s', 'classic rock', 'pop', 'elton john', 'rock']}, {'artist': 'Григорий Лепс', 'track': 'рюмка водки', 'tags': ['russian', 'rock', 'russian rock', 'chanson', 'male vocalists']}]\n"
      ]
     }
    ],
    "source": [
-    "tags = get_song_tags(artist='Elthon John', track='goodbye yellow brick road')\n",
+    "tags = []\n",
+    "tags.append(get_song_tags(artist='Elthon John', track='goodbye yellow brick road'))\n",
+    "tags.append(get_song_tags(artist='Григорий Лепс', track='рюмка водки'))\n",
     "print(tags)"
    ]
   }
