add dirs fixes in preproc

--- a/preproc.ipynb
+++ b/preproc.ipynb
@@ -11,16 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def decode(path_from, path_to):\n",
+    "def decode(path_from, path_to, separator):\n",
     "    from pydub import AudioSegment\n",
-    "    for l in [filename for filename in os.listdir() if '.mp3' in filename]:\n",
+    "    for l in [filename for filename in os.listdir(path_from) if '.mp3' in filename]:\n",
     "        try:\n",
+    "            \n",
     "            sound = AudioSegment.from_mp3(os.path.abspath(l))\n",
-    "            sound.export(re.split('[.]', l)[0]+'.wav', format=\"wav\")\n",
+    "            sound.export(os.path.abspath(path_to)+separator+re.split('[.]', l)[0]+'.wav', format=\"wav\")\n",
     "            print('Successfully decoding ' + os.path.abspath(l) + ' to WAV')\n",
     "        except Exception as e:\n",
     "            print(e)"
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +41,7 @@
     }
    ],
    "source": [
-    "decode(path_from = '.', path_to = '.')"
+    "decode(path_from = '.', path_to = '.', separator = '\\\\')"
    ]
   }
  ],
