--- a/preproc.ipynb
+++ b/preproc.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, re"
+    "import os, re\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,19 +29,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extr_mfcc(file_name):\n",
+    "    import scipy.io.wavfile as wav\n",
+    "    import speechpy\n",
+    "    try:\n",
+    "        fs, signal = wav.read(file_name)\n",
+    "        signal = signal[:,0]\n",
+    "    except Exception as e:\n",
+    "        print(\"Error: reading wav file.\", e)\n",
+    "    try:\n",
+    "        mfcc = speechpy.feature.mfcc(signal, sampling_frequency=fs, frame_length=0.020, frame_stride=0.01,\n",
+    "                 num_filters=40, fft_length=512, low_frequency=0, high_frequency=None)\n",
+    "        mfcc_cmvn = speechpy.processing.cmvnw(mfcc,win_size=301,variance_normalization=True)\n",
+    "        mfcc_feature_cube = speechpy.feature.extract_derivative_feature(mfcc)\n",
+    "    except Exception as e:\n",
+    "        print(\"Error: feature extraction.\", e) \n",
+    "    return (mfcc, mfcc_cmvn, mfcc_feature_cube)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_playlist(path):\n",
+    "    for l in [filename for filename in os.listdir(path) if '.wav' in filename]:\n",
+    "        yield os.path.abspath(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully decoding c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\ElthonJohn-Sacrifice.mp3 to WAV\n"
+      "Successfully decoding c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\ElthonJohn-Sacrifice.mp3 to WAV\n",
+      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\ElthonJohn-Sacrifice.wav: mfcc feature shape= (30763, 13)\n",
+      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\ElthonJohn-Sacrifice.wav: mfcc(mean + variance normalized) feature shape= (30763, 13)\n",
+      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\ElthonJohn-Sacrifice.wav: mfcc feature cube shape= (30763, 13, 3)\n"
      ]
     }
    ],
    "source": [
-    "decode(path_from = '.', path_to = '.', separator = '\\\\')"
+    "decode(path_from = '.', path_to = '.', separator = '\\\\')\n",
+    "for file_name in get_playlist('.'):\n",
+    "    features = extr_mfcc(file_name)\n",
+    "    print(file_name+': mfcc feature shape=', features[0].shape)\n",
+    "    print(file_name+': mfcc(mean + variance normalized) feature shape=',  features[1].shape)\n",
+    "    print(file_name+': mfcc feature cube shape=', features[2].shape)"
    ]
   }
  ],
@@ -49,6 +93,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
