update parser and refactoring preproc

--- a/html_lastfm_parser.ipynb
+++ b/html_lastfm_parser.ipynb
@@ -9,12 +9,12 @@
     "import requests as req\n",
     "import lxml.html\n",
     "import json\n",
-    "import re"
+    "import re, os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,22 +32,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'artist': 'Elthon John', 'track': 'goodbye yellow brick road', 'tags': ['70s', 'classic rock', 'pop', 'elton john', 'rock']}, {'artist': 'Григорий Лепс', 'track': 'рюмка водки', 'tags': ['russian', 'rock', 'russian rock', 'chanson', 'male vocalists']}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tags = []\n",
-    "tags.append(get_song_tags(artist='Elthon John', track='goodbye yellow brick road'))\n",
-    "tags.append(get_song_tags(artist='Григорий Лепс', track='рюмка водки'))\n",
-    "print(tags)"
+    "def get_track_list(path):\n",
+    "    for file in os.listdir(path):\n",
+    "        track_info = re.split('[-]', file[:-4])\n",
+    "        if track_info[0][-1] == ' ':\n",
+    "            track_info[0] = track_info[0][:-1]\n",
+    "        if track_info[1][0] == ' ':\n",
+    "            track_info[1] = track_info[1][1:]\n",
+    "        yield track_info[0], track_info[1], file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_json(path, user_id):\n",
+    "    info = []\n",
+    "    #TODO добавить проверку на наличие тегов. Если нет тегов дальше ничего не делаем\n",
+    "    for artist, track, file_name in get_track_list(path):\n",
+    "        meta = get_song_tags(artist= artist, track= track)\n",
+    "        meta['file_name'] = file_name\n",
+    "        info.append(meta)\n",
+    "    with open(path+f'{user_id}_info.json', 'w') as fp:\n",
+    "        json.dump(info, fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "make_json('.//tracks//', 1)"
    ]
   }
  ],
