--- a/preproc.ipynb
+++ b/preproc.ipynb
@@ -2,21 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os, re\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pickle as pkl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def decode(path_from, path_to, separator):\n",
+    "    if not os.path.exists(path_to):\n",
+    "        os.makedirs(path_to)\n",
     "    from pydub import AudioSegment\n",
     "    for l in [filename for filename in os.listdir(path_from) if '.mp3' in filename]:\n",
     "        try:\n",
@@ -30,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,8 +68,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dump(file_name, path_to, data):\n",
+    "    if not os.path.exists(path_to):\n",
+    "        os.makedirs(path_to)\n",
+    "    pkl_name = re.split(r'\\\\',file_name)[-1][:-4]\n",
+    "    pkl.dump(features[0], open(path_to + pkl_name, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -101,74 +119,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elthon John - Sacrifice.wav: mfcc feature shape= (30763, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elthon John - Sacrifice.wav: mfcc(mean + variance normalized) feature shape= (30763, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elthon John - Sacrifice.wav: mfcc feature cube shape= (30763, 13, 3)\n",
-      "\n",
-      "\n",
-      "Error: reading wav file c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Bennie and the Jets (with lyrics).wav. too many indices for array\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Bennie and the Jets (with lyrics).wav: mfcc feature shape= (31077, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Bennie and the Jets (with lyrics).wav: mfcc(mean + variance normalized) feature shape= (31077, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Bennie and the Jets (with lyrics).wav: mfcc feature cube shape= (31077, 13, 3)\n",
-      "\n",
-      "\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Can you feel the love tonight.wav: mfcc feature shape= (24001, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Can you feel the love tonight.wav: mfcc(mean + variance normalized) feature shape= (24001, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Can you feel the love tonight.wav: mfcc feature cube shape= (24001, 13, 3)\n",
-      "\n",
-      "\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Candle In The Wind.wav: mfcc feature shape= (26592, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Candle In The Wind.wav: mfcc(mean + variance normalized) feature shape= (26592, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Candle In The Wind.wav: mfcc feature cube shape= (26592, 13, 3)\n",
-      "\n",
-      "\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - I Guess That's Why They Call It The Blues.wav: mfcc feature shape= (28304, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - I Guess That's Why They Call It The Blues.wav: mfcc(mean + variance normalized) feature shape= (28304, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - I Guess That's Why They Call It The Blues.wav: mfcc feature cube shape= (28304, 13, 3)\n",
-      "\n",
-      "\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - I'm Still Standing.wav: mfcc feature shape= (18472, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - I'm Still Standing.wav: mfcc(mean + variance normalized) feature shape= (18472, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - I'm Still Standing.wav: mfcc feature cube shape= (18472, 13, 3)\n",
-      "\n",
-      "\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Rocket Man (Official Music Video).wav: mfcc feature shape= (28213, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Rocket Man (Official Music Video).wav: mfcc(mean + variance normalized) feature shape= (28213, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Rocket Man (Official Music Video).wav: mfcc feature cube shape= (28213, 13, 3)\n",
-      "\n",
-      "\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Spirit In The Sky.wav: mfcc feature shape= (21531, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Spirit In The Sky.wav: mfcc(mean + variance normalized) feature shape= (21531, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Spirit In The Sky.wav: mfcc feature cube shape= (21531, 13, 3)\n",
-      "\n",
-      "\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Tiny Dancer (Official Music Video).wav: mfcc feature shape= (40617, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Tiny Dancer (Official Music Video).wav: mfcc(mean + variance normalized) feature shape= (40617, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Tiny Dancer (Official Music Video).wav: mfcc feature cube shape= (40617, 13, 3)\n",
-      "\n",
-      "\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Tiny Dancer.wav: mfcc feature shape= (36180, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Tiny Dancer.wav: mfcc(mean + variance normalized) feature shape= (36180, 13)\n",
-      "c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Tiny Dancer.wav: mfcc feature cube shape= (36180, 13, 3)\n",
-      "\n",
-      "\n"
+      "Error: reading wav file c:\\Users\\Kozyrevsky-V\\Documents\\recom\\RecomendationSystem\\wavs\\Elton John - Bennie and the Jets (with lyrics).wav. too many indices for array\n"
      ]
     }
    ],
    "source": [
     "for file_name in get_playlist('.\\\\wavs\\\\'):\n",
     "    features = extr_mfcc(file_name)\n",
-    "    print(file_name+': mfcc feature shape=', features[0].shape)\n",
-    "    print(file_name+': mfcc(mean + variance normalized) feature shape=',  features[1].shape)\n",
-    "    print(file_name+': mfcc feature cube shape=', features[2].shape)\n",
-    "    print('\\n')"
+    "    dump(file_name, \".\\\\mfccs\\\\\", features[0])"
    ]
   }
  ],
