update feature extraction

--- a/html_lastfm_parser.ipynb
+++ b/html_lastfm_parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'artist': 'Best Songs Of Elton John', 'track': 'Elton John Greatest Hits Playlist', 'tags': [], 'file_name': 'Best Songs Of Elton John - Elton John Greatest Hits Playlist.mp3'}, {'artist': 'Billy Joel, Elton John', 'track': 'Piano Man (live)', 'tags': ['classic rock'], 'file_name': 'Billy Joel, Elton John - Piano Man (live).mp3'}, {'artist': 'DJ Snake', 'track': 'Magenta Riddim', 'tags': ['party', '2018 single', 'moombahton'], 'file_name': 'DJ Snake - Magenta Riddim.mp3'}, {'artist': 'Elthon John', 'track': 'Sacrifice', 'tags': ['pop', '80s', 'elton john', 'classic rock', 'british'], 'file_name': 'Elthon John - Sacrifice.mp3'}, {'artist': 'Elton John', 'track': 'Bennie and the Jets (with lyrics)', 'tags': ['pop', 'classic rock', 'singer-songwriter', 'rock', 'piano'], 'file_name': 'Elton John - Bennie and the Jets (with lyrics).mp3'}, {'artist': 'Elton John', 'track': 'Can you feel the love tonight', 'tags': ['soundtrack', 'disney', 'pop', '90s', 'piano'], 'file_name': 'Elton John - Can you feel the love tonight.mp3'}, {'artist': 'Elton John', 'track': 'Candle In The Wind', 'tags': ['pop', 'classic rock', 'elton john', 'rock', 'piano'], 'file_name': 'Elton John - Candle In The Wind.mp3'}, {'artist': 'Elton John', 'track': \"I Guess That's Why They Call It The Blues\", 'tags': ['pop', 'classic rock', '80s', 'elton john', 'rock'], 'file_name': \"Elton John - I Guess That's Why They Call It The Blues.mp3\"}, {'artist': 'Elton John', 'track': \"I'm Still Standing\", 'tags': ['80s', 'pop', 'rock', 'elton john', 'classic rock'], 'file_name': \"Elton John - I'm Still Standing.mp3\"}, {'artist': 'Elton John', 'track': 'Rocket Man (Official Music Video)', 'tags': ['pop', 'classic rock', 'singer-songwriter', 'rock', 'piano'], 'file_name': 'Elton John - Rocket Man (Official Music Video).mp3'}, {'artist': 'Elton John', 'track': 'Spirit In The Sky', 'tags': ['pop', 'classic rock', 'cover', 'elton john spirit in the sky'], 'file_name': 'Elton John - Spirit In The Sky.mp3'}, {'artist': 'Elton John', 'track': 'Tiny Dancer (Official Music Video)', 'tags': ['pop', 'classic rock', 'singer-songwriter', 'rock', 'piano'], 'file_name': 'Elton John - Tiny Dancer (Official Music Video).mp3'}, {'artist': 'Elton John', 'track': 'Tiny Dancer', 'tags': ['classic rock', '70s', 'piano', 'pop', 'rock'], 'file_name': 'Elton John - Tiny Dancer.mp3'}]\n"
+      "[{'artist': 'Billy Joel, Elton John', 'track': 'Piano Man (live)', 'tags': ['classic rock'], 'file_name': 'Billy Joel, Elton John - Piano Man (live).mp3'}, {'artist': 'DJ Snake', 'track': 'Magenta Riddim', 'tags': ['party', '2018 single', 'moombahton'], 'file_name': 'DJ Snake - Magenta Riddim.mp3'}, {'artist': 'Elthon John', 'track': 'Sacrifice', 'tags': ['pop', '80s', 'elton john', 'classic rock', 'british'], 'file_name': 'Elthon John - Sacrifice.mp3'}, {'artist': 'Elton John', 'track': 'Bennie and the Jets (with lyrics)', 'tags': ['pop', 'classic rock', 'singer-songwriter', 'rock', 'piano'], 'file_name': 'Elton John - Bennie and the Jets (with lyrics).mp3'}, {'artist': 'Elton John', 'track': 'Can you feel the love tonight', 'tags': ['soundtrack', 'disney', 'pop', '90s', 'piano'], 'file_name': 'Elton John - Can you feel the love tonight.mp3'}, {'artist': 'Elton John', 'track': 'Candle In The Wind', 'tags': ['pop', 'classic rock', 'elton john', 'rock', 'piano'], 'file_name': 'Elton John - Candle In The Wind.mp3'}, {'artist': 'Elton John', 'track': \"I Guess That's Why They Call It The Blues\", 'tags': ['pop', 'classic rock', '80s', 'elton john', 'rock'], 'file_name': \"Elton John - I Guess That's Why They Call It The Blues.mp3\"}, {'artist': 'Elton John', 'track': \"I'm Still Standing\", 'tags': ['80s', 'pop', 'rock', 'elton john', 'classic rock'], 'file_name': \"Elton John - I'm Still Standing.mp3\"}, {'artist': 'Elton John', 'track': 'Rocket Man (Official Music Video)', 'tags': ['pop', 'classic rock', 'singer-songwriter', 'rock', 'piano'], 'file_name': 'Elton John - Rocket Man (Official Music Video).mp3'}, {'artist': 'Elton John', 'track': 'Spirit In The Sky', 'tags': ['pop', 'classic rock', 'cover', 'elton john spirit in the sky'], 'file_name': 'Elton John - Spirit In The Sky.mp3'}, {'artist': 'Elton John', 'track': 'Tiny Dancer (Official Music Video)', 'tags': ['pop', 'classic rock', 'singer-songwriter', 'rock', 'piano'], 'file_name': 'Elton John - Tiny Dancer (Official Music Video).mp3'}, {'artist': 'Elton John', 'track': 'Tiny Dancer', 'tags': ['classic rock', '70s', 'piano', 'pop', 'rock'], 'file_name': 'Elton John - Tiny Dancer.mp3'}]\n"
      ]
     }
    ],
