--- a/html_lastfm_parser.ipynb
+++ b/html_lastfm_parser.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,8 @@
     "    for artist, track, file_name in get_track_list(path):\n",
     "        meta = get_song_tags(artist= artist, track= track)\n",
     "        meta['file_name'] = file_name\n",
-    "        info.append(meta)\n",
+    "        if meta['tags']:\n",
+    "            info.append(meta)\n",
     "    return info"
    ]
   },
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +90,8 @@
    "source": [
     "info = get_json('.//tracks//')\n",
     "print(info)\n",
-    "dump(info,'', 1)"
+    "dump(info,'', 1)\n",
+    "#TODO После генерации фитч добавить в json поле 'features' чтобы можно было обращаться на прямую"
    ]
   }
  ],
