--- a/classifier/CNN.ipynb
+++ b/classifier/CNN.ipynb
@@ -2,45 +2,82 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Kozyrevsky-V\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Dropout, Flatten\n",
-    "from keras.layers import Conv2D, MaxPooling2D\n",
-    "from keras import backend as K\n",
     "import sys\n",
     "import numpy as np\n",
     "sys.path.insert(0, r'../')\n",
     "import src.dataset as ds\n",
     "import src.html_lastfm_parser as hlp\n",
-    "from keras.optimizers import SGD"
+    "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(8,) (8, 30)\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def create_weights(shape):\n",
+    "    return tf.Variable(tf.truncated_normal(shape, stddev=0.05))\n",
+    " \n",
+    "def create_biases(size):\n",
+    "    return tf.Variable(tf.constant(0.05, shape=[size]))\n",
+    "\n",
+    "def create_convolutional_layer(input, num_input_channels, conv_filter_size, num_filters):  \n",
+    "    ## We shall define the weights that will be trained using create_weights function.\n",
+    "    weights = create_weights(shape=[conv_filter_size, conv_filter_size, num_input_channels, num_filters])\n",
+    "    ## We create biases using the create_biases function. These are also trained.\n",
+    "    biases = create_biases(num_filters)\n",
+    " \n",
+    "    ## Creating the convolutional layer\n",
+    "    layer = tf.nn.conv2d(input=input,\n",
+    "                     filter=weights,\n",
+    "                     strides=[1, 1, 1, 1],\n",
+    "                     padding='SAME')\n",
+    " \n",
+    "    layer += biases\n",
+    " \n",
+    "    ## We shall be using max-pooling.  \n",
+    "    layer = tf.nn.max_pool(value=layer,\n",
+    "                            ksize=[1, 2, 2, 1],\n",
+    "                            strides=[1, 2, 2, 1],\n",
+    "                            padding='SAME')\n",
+    "    ## Output of pooling is fed to Relu which is the activation function for us.\n",
+    "    layer = tf.nn.relu(layer)\n",
+    " \n",
+    "    return layer\n",
+    "\n",
+    "def create_flatten_layer(layer):\n",
+    "    layer_shape = layer.get_shape()\n",
+    "    num_features = layer_shape[1:4].num_elements()\n",
+    "    layer = tf.reshape(layer, [-1, num_features])\n",
+    " \n",
+    "    return layer\n",
+    "\n",
+    "def create_fc_layer(input,          \n",
+    "             num_inputs,    \n",
+    "             num_outputs,\n",
+    "             use_relu=True):\n",
+    "    \n",
+    "    #Let's define trainable weights and biases.\n",
+    "    weights = create_weights(shape=[num_inputs, num_outputs])\n",
+    "    biases = create_biases(num_outputs)\n",
+    "\n",
+    "    layer = tf.matmul(input, weights) + biases\n",
+    "    if use_relu:\n",
+    "        layer = tf.nn.relu(layer)\n",
+    "\n",
+    "    return layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "batch_size = 2\n",
     "num_classes = 10\n",
@@ -49,8 +86,92 @@
     "statistic = hlp.y_statistic(path_with_jsons='../jsons/')\n",
     "y_generator = hlp.y_transform(statistic=statistic, Y=Y)\n",
     "Y = np.asarray([y for y in y_generator])\n",
-    "X = np.asarray(X) #TODO решить что делать с размерами так как сейчас размеры такие (N, ?, 13)\n",
-    "print(X.shape, Y.shape)"
+    "cutX = []\n",
+    "for x in X:\n",
+    "    cutX.append(x[:1000, :])\n",
+    "X = np.asarray(cutX) #TODO решить что делать с размерами так как сейчас размеры такие (N, ?, 13)\n",
+    "num_channels = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   2, 1000,   13])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = tf.truncated_normal([ 2, 1000, 13])\n",
+    "sess = tf.Session()\n",
+    "sess.run(tf.initialize_all_variables())\n",
+    "sess.run(tf.shape(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = tf.placeholder(tf.float32, shape=[None, X.shape[0],X.shape[1], num_channels], name='x')\n",
+    " \n",
+    "y_true = tf.placeholder(tf.float32, shape=[None, Y.shape[1]], name='y_true')\n",
+    "y_true_cls = tf.argmax(y_true, dimension=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'filter_size_conv1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-39-cee639ec851a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m layer_conv1 = create_convolutional_layer(input=x,\n\u001b[0;32m      2\u001b[0m                \u001b[0mnum_input_channels\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnum_channels\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m                \u001b[0mconv_filter_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfilter_size_conv1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m                num_filters=num_filters_conv1)\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'filter_size_conv1' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "layer_conv1 = create_convolutional_layer(input=x,\n",
+    "               num_input_channels=num_channels,\n",
+    "               conv_filter_size=filter_size_conv1,\n",
+    "               num_filters=num_filters_conv1)\n",
+    " \n",
+    "layer_conv2 = create_convolutional_layer(input=layer_conv1,\n",
+    "               num_input_channels=num_filters_conv1,\n",
+    "               conv_filter_size=filter_size_conv2,\n",
+    "               num_filters=num_filters_conv2)\n",
+    " \n",
+    "layer_conv3= create_convolutional_layer(input=layer_conv2,\n",
+    "               num_input_channels=num_filters_conv2,\n",
+    "               conv_filter_size=filter_size_conv3,\n",
+    "               num_filters=num_filters_conv3)\n",
+    "          \n",
+    "layer_flat = create_flatten_layer(layer_conv3)\n",
+    " \n",
+    "layer_fc1 = create_fc_layer(input=layer_flat,\n",
+    "                     num_inputs=layer_flat.get_shape()[1:4].num_elements(),\n",
+    "                     num_outputs=fc_layer_size,\n",
+    "                     use_relu=True)\n",
+    " \n",
+    "layer_fc2 = create_fc_layer(input=layer_fc1,\n",
+    "                     num_inputs=fc_layer_size,\n",
+    "                     num_outputs=num_classes,\n",
+    "                     use_relu=False)"
    ]
   }
  ],
